--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,8 @@
     "\n",
     "After entering insert mode for this cell, change some content. Don't worry about what you change as we can always undo it. We can revert our changes to a cell by making sure that we are still in insert mode and by pressing `command + z` on a mac or `control + z` on windows.\n",
     "\n",
-    "To get out of insert mode and see the effect of our changes, press `shift + enter`."
+    "To get out of insert mode and see the effect of our changes, press `shift + enter`.\n",
+    "We have already seen, to alter the contents of a cell we simply double click on that cell, bringing us into insert mode, and then change the contents.  Now let's see how to add, and delete cells from escape mode."
    ]
   },
   {
@@ -63,9 +64,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "We have already seen, to alter the contents of a cell we simply double click on that cell, bringing us into insert mode, and then change the contents.  Now let's see how to add, and delete cells from escape mode."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
